package _3_FactoryDesignPattern;

public enum DocumentType {
    TEXT,
    PRESENTATION,
    SPREADSHEET
}
